support fixed font size, better alignment but not there yet

--- a/text-path/style.css
+++ b/text-path/style.css
@@ -75,6 +75,8 @@ label {
 }
 
 .content > svg {
+    --font-scale-factor: 1;
+
     width: 100%;
     height: 100%;
     overflow: visible;
